--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "next": "15.3.3",
     "patch-package": "^8.0.0",
     "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^4.4.172",
     "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
