--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "patch-package": "^8.0.0",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.4.172",
+    "peerjs": "^1.5.4",
     "qrcode": "^1.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
